Ajuste callbacks govbr
